--- a/robby-ui/static/index.html
+++ b/robby-ui/static/index.html
@@ -13,7 +13,7 @@
     <h1>Robot Robby - genetic algorithm</h1>
     <br>NOTE: The page will only run correctly in ES6 compatible (newer) browsers.<br>
     <small>
-        repository: <a href="https://github.com/gmamaladze/deep-snake">https://github.com/gmamaladze/deep-robot</a> |
+        repository: <a href="https://github.com/gmamaladze/genetic-robby">github.com/gmamaladze/genetic-robby</a> |
         (c) George Mamaladze |
         license: MIT
     </small>
@@ -32,17 +32,15 @@
 <div class="text">
     <h2>What is this?</h2>
     <p>
-        My goal was to create a simple demo of deep learning which is:
+       Description:
     <ul>
         <li>
-            very small, but still funny
+            line 1
         </li>
     </ul>
     </p>
     <p>
         It is a toy. You can see how the robot is trained and gets gradually better.
-        The whole deep learning "magic" is happening in your browser. By reloading the page you are wiping Robby's
-        "brain". The complete code including visualization and the logic of the game is less then 500 lines.
     </p>
 </div>
 
