Added creation of executable jar.

--- a/robby-ui/static/index.html
+++ b/robby-ui/static/index.html
@@ -3,14 +3,14 @@
 <html lang="en">
 
 <head>
-    <title>Robot Robby - genetic algorithm</title>
+    <title>Robot com.gma.robby.Robby - genetic algorithm</title>
     <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
 
 <div class="container">
-    <h1>Robot Robby - genetic algorithm</h1>
+    <h1>Robot com.gma.robby.Robby - genetic algorithm</h1>
     <br>NOTE: The page will only run correctly in ES6 compatible (newer) browsers.<br>
     <small>
         repository: <a href="https://github.com/gmamaladze/genetic-robby">github.com/gmamaladze/genetic-robby</a> |
